--- a/astrokeep/src/App.css
+++ b/astrokeep/src/App.css
@@ -5,9 +5,10 @@
 }
 
 main {
-  position: relative;
   margin: 0;
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -40,6 +41,7 @@ main {
   display: block;
   padding: 0.5rem;
   font-size: 1.2rem;
+  font-weight: bolder;
   border: none;
   font-family: 'Lora', serif;
 }
@@ -61,33 +63,51 @@ main {
 }
 
 .note-box {
-  width: 20%;
+  width: 15%;
   box-shadow: 3px 3px 6px grey;
   padding: 1rem 1rem;
-  margin-top: 2rem 1rem;
+  margin: 2rem 2rem;
   position: relative;
   border-radius: 10px 10px;
 }
 
+
+.note-box > h1 {
+  font-size: 1.3rem;
+}
+
+.note-box > p {
+  font-size: 1rem;
+}
+
+.delete-btn {
+  align-self: center;
+}
+
+
+
+
 .footer {
-  /* display: flex;
-  justify-content: center;
-  background-color: black;
+  margin-top: auto;
   color: white;
-  height: 10vh;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
- */
-
-
-  position: absolute;
-  border: 2px solid;
-  right: 0;
-  bottom: 0;
-  left: 0;
   padding: 1rem;
-  background-color: #efefef;
+  background-color: black;
   text-align: center;
 }
 
+
+
+@media screen and (max-width: 786px) {
+  .new-note-box {
+    width: 100%
+  }
+
+  .note-box {
+    width: 80%vw;
+    padding: 1rem 1rem;
+    margin-top: 2rem 1rem;
+    position: relative;
+    border-radius: 10px 10px;
+  }  
+  
+}
